clusters/common/apps/flux-system/notifications/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CLUSTER_NAME}-flux-webhook
  namespace: flux-system
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - ${CLUSTER_NAME}-flux-webhook
